--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "interesting-node",
+  "name": "node-demo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {
-    "mysql": "^2.16.0",
-    "node": "^8.11.1"
-  },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/LeachZhou/Interesting-Node.git"
+    "url": "git+https://github.com/LeachZhou/node-demo.git"
   },
-  "author": "LeachZhou",
+  "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/LeachZhou/Interesting-Node/issues"
+    "url": "https://github.com/LeachZhou/node-demo/issues"
   },
-  "homepage": "https://github.com/LeachZhou/Interesting-Node#readme"
+  "homepage": "https://github.com/LeachZhou/node-demo#readme",
+  "dependencies": {
+    "async": "^2.6.1",
+    "cheerio": "^1.0.0-rc.2",
+    "eventproxy": "^1.0.0",
+    "express": "^4.16.4",
+    "superagent": "^4.0.0-beta.5"
+  }
 }
