--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "cheerio": "^1.0.0-rc.2",
     "eventproxy": "^1.0.0",
     "express": "^4.16.4",
+    "mocha": "^5.2.0",
+    "should": "^13.2.3",
     "superagent": "^4.0.0-beta.5"
   }
 }
