--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express": "^4.16.4",
     "mocha": "^5.2.0",
     "should": "^13.2.3",
-    "superagent": "^4.0.0-beta.5"
+    "superagent": "^4.0.0-beta.5",
+    "superagent-charset": "^1.2.0"
   },
   "devDependencies": {
     "mocha-phantomjs": "^4.1.0"
