掘金关注爬虫

--- a/juejin-following/package.json
+++ b/juejin-following/package.json
@@ -13,6 +13,7 @@
     "async": "^2.6.1",
     "express": "^4.16.4",
     "mysql": "^2.16.0",
+    "opener": "^1.5.1",
     "superagent": "^4.0.0-beta.5",
     "superagent-charset": "^1.2.0"
   }
