--- a/design-node/package.json
+++ b/design-node/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weiboimg",
+  "name": "design-node",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "form-data": "^3.0.0",
     "fs": "0.0.1-security",
+    "request": "^2.88.2",
     "superagent": "^5.2.2",
     "superagent-charset": "^1.2.0"
   }
