--- a/yikechuanmei/package.json
+++ b/yikechuanmei/package.json
@@ -11,8 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
-    "cheerio": "^1.0.0-rc.5",
-    "fs": "^0.0.1-security",
+    "dayjs": "^1.11.2",
+    "node-stream-zip": "^1.15.0",
     "qs": "^6.9.4"
   }
 }
