--- a/cartoon/package.json
+++ b/cartoon/package.json
@@ -2,6 +2,7 @@
     "name": "cartoon",
     "version": "1.0.0",
     "description": "",
+    "type": "module",
     "main": "index.js",
     "scripts": {
         "dev": "node index.js",
@@ -10,6 +11,8 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "puppeteer": "^10.2.0"
+        "chalk": "^5.0.1",
+        "puppeteer": "^10.2.0",
+        "single-line-log": "^1.1.2"
     }
 }
