--- a/init-demo/package.json
+++ b/init-demo/package.json
@@ -1,32 +1,32 @@
 {
-  "name": "node-demo",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "mocha-phantomjs index.html --ssl-protocol=any --ignore-ssl-errors=true"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/LeachZhou/node-demo.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/LeachZhou/node-demo/issues"
-  },
-  "homepage": "https://github.com/LeachZhou/node-demo#readme",
-  "dependencies": {
-    "async": "^2.6.1",
-    "cheerio": "^1.0.0-rc.2",
-    "eventproxy": "^1.0.0",
-    "express": "^4.16.4",
-    "mocha": "^5.2.0",
-    "should": "^13.2.3",
-    "superagent": "^4.0.0-beta.5",
-    "superagent-charset": "^1.2.0"
-  },
-  "devDependencies": {
-    "mocha-phantomjs": "^4.1.0"
-  }
+    "name": "node-demo",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "mocha-phantomjs index.html --ssl-protocol=any --ignore-ssl-errors=true"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/shaobeichen/node-demo.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/shaobeichen/node-demo/issues"
+    },
+    "homepage": "https://github.com/shaobeichen/node-demo#readme",
+    "dependencies": {
+        "async": "^2.6.1",
+        "cheerio": "^1.0.0-rc.2",
+        "eventproxy": "^1.0.0",
+        "express": "^4.16.4",
+        "mocha": "^5.2.0",
+        "should": "^13.2.3",
+        "superagent": "^4.0.0-beta.5",
+        "superagent-charset": "^1.2.0"
+    },
+    "devDependencies": {
+        "mocha-phantomjs": "^4.1.0"
+    }
 }
